# gork

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  main.py  makefile  pyproject.toml  readme.md  requirements.docker.txt  yoyo.ini  yoyo.ini.example
agents/: agents.yaml  generic.md  init.py  modify_image.md  source-resumer.md  source-selector.md  term-formatter.md  term-search.md
agents/execution/: conversation.py  describe_image.py  filter.py
agents/parser/: common.py  conversation.py  filter.py
agents/prompts/: conversation.md  describe-image.md  filter.md  intent-classifier.md  remember-formatter.md  transcriber.md
api/: __init__.py
database/: __init__.py  connection.py
database/migrations/: 20241210_01_LQSl5.rollback.sql  20241210_01_LQSl5.sql  20251203_01_esZT9-remember-feat-table.sql  20251203_02_mAXIh-image-models.sql  20251205_01_nhuzb-refac-media.sql  20251208_01_c99m2-refac-interaction-table.sql  20251210_01_GfjDR-add-new-id-field.sql  20251212_01_cPDwv-refac-media-for-embedding.sql  20251212_02_sLdXG-add-profile-pic-path.sql  20251221_01_7rSRX-favorite-message.sql  20251221_02_lKJ59-big-refactor.rollback.sql  20251221_02_lKJ59-big-refactor.sql  20251221_02_lKJ59-refac-agents.rollback.sql  20251221_02_lKJ59-refac-agents.sql  20251221_03_i2N4b-fix-message-media-fk.rollback.sql  20251221_03_i2N4b-fix-message-media-fk.sql
database/models/: __init__.py
embeddings/: __init__.py  generate_embeddings.py
evolution-api/: docker-compose.yaml
functions/: __init__.py  generate_image.py  intent.py  remember.py  resume.py  tokens.py  transcribe_audio.py  web_search.py
llm_access/: __init__.py  database.py
log/: __init__.py  config.py
s3/: __init__.py  connection.py
scheduler/: __init__.py  main.py
services/: __init__.py  manage_interaction.py  message_buffer.py  message_context.py  params.py  remember.py  save_image.py  save_profile_pic.py  save_video.py
tts/: __init__.py  piper_.py
utils/: __init__.py  env_var.py  hash.py  instance.py  path_config.py
(+80 files in other folders)
