[project]
name = "gork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "apscheduler>=3.11.1",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.2",
    "faker>=38.2.0",
    "fastapi>=0.122.0",
    "firecrawl-py>=4.9.0",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "pgvector>=0.4.2",
    "pillow>=12.0.0",
    "piper-tts>=1.3.0",
    "psycopg>=3.2.13",
    "python-dotenv>=1.2.1",
    "rembg>=2.0.69",
    "sentence-transformers>=5.2.0",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.44",
    "trafilatura>=2.0.0",
    "uvicorn>=0.38.0",
]
